--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:title="@string/item_1"
+        android:title="@string/drawer"
         android:id="@+id/item1_id" />
 
     <item
-        android:title="@string/item_2"
+        android:title="@string/Text_Filed"
         android:id="@+id/item2_id" />
 
     <item
