Add character counter

--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -25,6 +25,11 @@
 
     </style>
 
+    <style name="CharcterOverflow">
+
+        <item name="android:textColor">@color/colorError</item>
+    </style>
+
 
 
 </resources>
