--- a/app/src/main/res/layout/activity_text_field.xml
+++ b/app/src/main/res/layout/activity_text_field.xml
@@ -39,7 +39,9 @@
         android:layout_marginTop="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginBottom="8dp">
+        android:layout_marginBottom="8dp"
+        app:passwordToggleEnabled="true"
+        app:counterOverflowTextAppearance="@style/CharcterOverflow">
 
 
         <android.support.v7.widget.AppCompatEditText
