--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="colorPrimary">#2196F3</color>
     <color name="colorPrimaryDark">#1976D2</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#40C4FF</color>
+    <color name="colorError">#FF5252</color>
     <color name="colorBackground">#FFFFFF</color>
     <color name="colorItem">#000000</color>
 </resources>
