--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,9 @@
     <color name="colorError">#FF5252</color>
     <color name="colorBackground">#FFFFFF</color>
     <color name="colorItem">#000000</color>
+    <color name="colorRiasedButton">#4CAF50</color>
+    <color name="colorRiasedButtonText">#FFFFFF</color>
+    <color name="colorFlatButton">#2196F3</color>
+    <color name="colorFAB">#E040FB</color>
+
 </resources>
