--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,8 @@
     <color name="colorRiasedButtonText">#FFFFFF</color>
     <color name="colorFlatButton">#2196F3</color>
     <color name="colorFAB">#E040FB</color>
+    <color name="colorSwitch">#40C4FF</color>
+    <color name="colorEnable">#FF5252</color>
+    <color name="colorDisable">#FFAB40</color>
 
 </resources>
