--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -40,6 +40,16 @@
 
     </style>
 
+    <style name="SwitchTheme">
+
+        <item name="colorAccent">@color/colorSwitch</item>
+    </style>
+
+    <style name="CheckBoxTheme">
+        <item name="colorAccent">@color/colorEnable</item>
+        <item name="colorControlNormal">@color/colorDisable</item>
+    </style>
+
 
 
 </resources>
