--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -50,6 +50,11 @@
         <item name="colorControlNormal">@color/colorDisable</item>
     </style>
 
+    <style name="RadioButtonTheme">
+        <item name="colorAccent">@color/colorRiasedButton</item>
+    </style>
+
+
 
 
 </resources>
